--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                             </div>
                         </div>
                         <div style="flex-shrink: 0; width: 120px; height: 120px; border-radius: 50%; overflow: hidden; border: 3px solid var(--odoo-purple); box-shadow: 0 0 20px rgba(113, 75, 103, 0.5); transform: translateY(-20px);">
-                            <img src="vicky_odoo.jpg" onerror="this.src='https://ui-avatars.com/api/?name=Vicky+Odoo&background=714B67&color=fff'" alt="Vicky" style="width: 100%; height: 100%; object-fit: cover; object-position: 80% 60%; transform: scale(1.1);">
+                            <img src="vicky_odoo.png" onerror="this.src='https://ui-avatars.com/api/?name=Vicky+Odoo&background=714B67&color=fff'" alt="Vicky" style="width: 100%; height: 100%; object-fit: cover; object-position: 80% 60%; transform: scale(1.1);">
                         </div>
                     </div>
                 </div>
@@ -469,3 +469,4 @@
     </script>
 </body>
 </html>
+
