--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                         <br><br>
                         <a href="mailto:vicky875014@gmail.com" style="color:var(--odoo-green); text-decoration:none; font-size:1.1rem; position: relative; z-index: 10;"><i class="fas fa-envelope"></i> vicky875014@gmail.com</a>
                         <br>
-                        <a href="https://wa.me/918750148077" style="color:#25D366; text-decoration:none; font-size:1.1rem; position: relative; z-index: 10; margin-top: 8px; display:inline-block;"><i class="fab fa-whatsapp"></i> +91 98765 43210</a>
+                        <a href="https://wa.me/918750148077" style="color:#25D366; text-decoration:none; font-size:1.1rem; position: relative; z-index: 10; margin-top: 8px; display:inline-block;"><i class="fab fa-whatsapp"></i> +91 8750148077</a>
                     </div>
                 </div>
                 <div class="card" onclick="window.open('https://www.linkedin.com/in/-016479302')" style="cursor:pointer; background:#0077b5;">
@@ -469,5 +469,6 @@
     </script>
 </body>
 </html>
+
 
 
