Update resume name

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                     </div>
                 </div>
 
-                <div class="card" onclick="window.open('job_Resume odoo developer.pdf')" style="cursor:pointer; background: linear-gradient(135deg, var(--odoo-purple), #5b21b6);">
+                <div class="card" onclick="window.open('job_resume odoo developer.pdf')" style="cursor:pointer; background: linear-gradient(135deg, var(--odoo-purple), #5b21b6);">
                     <div class="card-title" style="color:rgba(255,255,255,0.8);">Quick Action</div>
                     <div class="card-content" style="font-size:1.4rem; color:white;"><i class="fas fa-download"></i> Resume</div>
                 </div>
