--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                         <a href="https://wa.me/918750148077" style="color:#25D366; text-decoration:none; font-size:1.1rem; position: relative; z-index: 10; margin-top: 8px; display:inline-block;"><i class="fab fa-whatsapp"></i> +91 8750148077</a>
                     </div>
                 </div>
-                <div class="card" onclick="window.open('linkedin.com/in/vicky-kumar-016479302')" style="cursor:pointer; background:#0077b5;">
+                <div class="card" onclick="window.open('https://www.linkedin.com/in/vicky-kumar-016479302')" style="cursor:pointer; background:#0077b5;">
                     <div class="card-title" style="color:#eee;">Professional</div>
                     <div class="card-content" style="color:white;"><i class="fab fa-linkedin"></i> LinkedIn</div>
                     <div class="card-desc">Let's connect.</div>
@@ -469,6 +469,7 @@
     </script>
 </body>
 </html>
+
 
 
 
