--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                                 Promoted from Intern to Full-time. Crafting scalable ERP solutions with Python, XML & PostgreSQL.
                             </div>
                             <div style="margin-top:20px; display:flex; gap:10px;">
-                                <a href="linkedin.com/in/vicky-kumar-016479302" target="_blank" class="skill-tag" style="background:#0077b5; border:none; color:white; text-decoration:none;"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                                <a href="https://www.linkedin.com/in/vicky-kumar-016479302" target="_blank" class="skill-tag" style="background:#0077b5; border:none; color:white; text-decoration:none;"><i class="fab fa-linkedin"></i> LinkedIn</a>
                                 <a href="mailto:vicky@gmail.com" class="skill-tag" style="background:#ea4335; border:none; color:white; text-decoration:none;"><i class="fas fa-envelope"></i> Email</a>
                             </div>
                         </div>
@@ -469,6 +469,7 @@
     </script>
 </body>
 </html>
+
 
 
 
