--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         .skill-tag { display: inline-block; background: rgba(255,255,255,0.1); padding: 5px 12px; border-radius: 20px; font-size: 0.8rem; margin-right: 5px; margin-bottom: 8px; border: 1px solid rgba(255,255,255,0.1); position: relative; z-index: 10; cursor: pointer; }
 
         @keyframes floatIcon { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-6px); } }
-        .card:hover img, .card:hover i { animation: floatIcon 3s ease-in-out infinite; }
+        .card:hover img:not(.no-float), .card:hover i:not(.no-float) { animation: floatIcon 3s ease-in-out infinite; }
 
         /* --- TIMELINE CSS (EXPERIENCE) --- */
         .timeline-container { position: relative; max-width: 1100px; margin: 0 auto; padding: 20px 0; }
@@ -592,5 +592,6 @@
     </script>
 </body>
 </html>
+
 
 
