--- a/index.html
+++ b/index.html
@@ -380,12 +380,12 @@
                                 Promoted from Intern to Full-time. Crafting scalable ERP solutions with Python, XML & PostgreSQL.
                             </div>
                             <div style="margin-top:20px; display:flex; gap:10px;">
-                                <a href="https://www.linkedin.com/in/vicky-kumar-016479302" target="_blank" class="skill-tag" style="background:#0077b5; border:none; color:white; text-decoration:none;"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                                <a href="mailto:vicky@gmail.com" class="skill-tag" style="background:#ea4335; border:none; color:white; text-decoration:none;"><i class="fas fa-envelope"></i> Email</a>
+                                <a href="https://www.linkedin.com/in/vicky-kumar-016479302" target="_blank" class="skill-tag" style="background:#0077b5; border:none; color:white; text-decoration:none;"><i fab fa-linkedin no-float"></i> LinkedIn</a>
+                                <a href="mailto:vicky@gmail.com" class="skill-tag" style="background:#ea4335; border:none; color:white; text-decoration:none;"><i class="fas fa-envelope no-float"></i> Email</a>
                             </div>
                         </div>
                         <div style="flex-shrink: 0; width: 120px; height: 120px; border-radius: 50%; overflow: hidden; border: 3px solid var(--odoo-purple); box-shadow: 0 0 20px rgba(113, 75, 103, 0.5); transform: translateY(-20px);">
-                            <img src="vicky_odoo.png" onerror="this.src='https://ui-avatars.com/api/?name=Vicky+Odoo&background=714B67&color=fff'" alt="Vicky" style="width: 100%; height: 100%; object-fit: cover; object-position: 80% 60%; transform: scale(1.1);">
+                            <img class="no-float" src="vicky_odoo.png" onerror="this.src='https://ui-avatars.com/api/?name=Vicky+Odoo&background=714B67&color=fff'" alt="Vicky" style="width: 100%; height: 100%; object-fit: cover; object-position: 80% 60%; transform: scale(1.1);">
                         </div>
                     </div>
                 </div>
@@ -592,6 +592,7 @@
     </script>
 </body>
 </html>
+
 
 
 
