--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                 <div class="card card-large">
                     <div class="card-title">Professional Status</div><div class="card-content">Currently Working</div>
                     <div class="card-desc">
-                        Full-time <b>Odoo Developer</b> at Assert IT Solutions.<br>
+                        Full-time <b>Odoo Developer</b> at <span style="background: var(--odoo-purple); padding: 2px 8px; border-radius: 4px; color: white;">Assert IT Solutions</span>.
                         Open to connecting with like-minded developers.
                         <br><br>
                         <a href="mailto:vicky875014@gmail.com" style="color:var(--odoo-green); text-decoration:none; font-size:1.1rem; position: relative; z-index: 10;"><i class="fas fa-envelope"></i> vicky875014@gmail.com</a>
@@ -592,6 +592,7 @@
     </script>
 </body>
 </html>
+
 
 
 
