--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
             .terminal-container { width: 95%; margin-top: 20px; }
             .card { transform: none !important; }
         }
+        @media (max-width: 480px) {
+            .card-content { font-size: 1.3rem; }
+            .skill-tag { padding: 6px 14px; font-size: 0.75rem; }
+        }
     </style>
 </head>
 <body>
