--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@
         @media (max-width: 480px) {
             .card-content { font-size: 1.3rem; }
             .skill-tag { padding: 6px 14px; font-size: 0.75rem; }
+            .card-large > div[style*="display: flex"] { flex-direction: column-reverse; align-items: center !important; }
+            .card-large > div[style*="display: flex"] > div:first-child { text-align: center; }
         }
     </style>
 </head>
